server/public/styles/styles.css
body{
    background: linear-gradient(to right, #5F79DC, #2fd7ac);
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
}

h1{
    color:#36447b;
    text-align: center;
}

hr{
    width: 91%;
    height: 4px;
    margin-left: auto;
    margin-right: auto;
    background: linear-gradient(to right, #2fd7ac, #5F79DC);
}

input{
    color:#36447b;
    width: 40%;
}


.task-entry{
    margin-top: 25px;
    margin-bottom: 25px;
}

button{
    background:#5F79DC;
    color: #2fd7ac;
}

button:hover{
    background-color: inherit;
    color: #36447b;
}

h2{
    color:#36447b;
    margin-left: 35px;
}

label{
    color:#36447b;
    margin-left: 35px;
}

table{ 
    color: #36447b;
    border: 1.5px solid #36447b;
    border-collapse: collapse;
    width: 80%;
    margin-left: 35px;
}

th, td{
    border: 1.5px solid #36447b;
    padding: 12px;
}

th:first-child, td:first-child{
    width: 70%;
}

th:nth-child(2), td:nth-child(2){
    width: 15%;
}

th:last-child, td:last-child{
    width: 15%;
}

